--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -2,6 +2,17 @@
 
 body {
   background-color: #1D1D1D;
+      /*background-image:linear-gradient(#434343, #282828);*/
+
+
+/*background-color: #8EC5FC;
+background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);*/
+
+/*background-color: #21D4FD;
+background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);*/
+
+background-color: #0093E9;
+background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
 }
 
 body, html, #app, #app>div {
@@ -12,12 +23,18 @@ body, html, #app, #app>div {
 }
 
 a > navbar-brand {
-  /*font-family: 'Roboto';*/
-  font-weight: bold;
+
+}
+
+.navbar {
+  /*font-family: 'Roboto' !important;*/
+  /*font-weight: bold !important;*/
+  /*text-align: center !important;*/
+  font-size: 18px !important;
 }
 section {
   position: relative;
-  
+
   text-align:center;
   width: 100vw;
   height: calc(100% - 56px);
@@ -60,4 +77,12 @@ section .section {
     -webkit-animation: blink 0.7s infinite;
     -moz-animation: blink 0.7s infinite;
     animation: blink 0.7s infinite;
+}
+
+
+#app {
+    background-color: transparent;
+    background-image:       linear-gradient(0deg, transparent 24%, rgba(255, 255, 255, .05) 25%, rgba(255, 255, 255, .05) 26%, transparent 27%, transparent 74%, rgba(255, 255, 255, .05) 75%, rgba(255, 255, 255, .05) 76%, transparent 77%, transparent), linear-gradient(90deg, transparent 24%, rgba(255, 255, 255, .05) 25%, rgba(255, 255, 255, .05) 26%, transparent 27%, transparent 74%, rgba(255, 255, 255, .05) 75%, rgba(255, 255, 255, .05) 76%, transparent 77%, transparent);
+  height:100%;
+  background-size:75px 75px;
 }
